--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ pyrogram==1.4.16
 python-dotenv
 pyyaml==5.3.1
 requests
+speedtest-cli
 spotipy
 tgcrypto
 youtube-search
 youtube-search-python
+yt-dlp
